# ExoCortex-core

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION RULES.md  GEMINI.md  GITHUB_METADATA.md  LICENSE  MEMORY.md  OPEN_SOURCE_NOTES.md  README.md  REFERENCES.md  RELEASE_CHECKLIST.md  REPO_SPLIT.md  REVIEW.md  SECURITY.md  SKILLS.md  STATE.md  SUPPORT.md  WORKFLOWS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: README.md
agents/builder/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/chief-of-staff/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/knowledge-steward/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/life-systems/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/planning/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/research/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
agents/reviewer/: AGENT.md  DECISION RULES.md  MEMORY.md  README.md  SKILLS.md  STATE.md  WORKFLOWS.md
docs/: README.md  compositional-examples.md  first-5-minutes.md  index.html  technical-architecture.md
docs/assets/: architecture-context-source.html  architecture-loop-source.html  exocortex-og-source.html  terminal-walkthrough-source.html
docs/scripts/: generate_demo_gif.py
domains/: README.md
domains/learning/: AGENT.md  README.md
domains/life/: AGENT.md  README.md
domains/work/: AGENT.md  README.md
domains/writing/: AGENT.md  README.md
journal/: README.md
journal/inbox/: README.md  intent-review-state.json  pending-intents.md  reviewed-intents.md
journal/raw/: README.md
journal/sessions/: README.md
journal/summarised/: README.md
journal/weekly/: README.md
raw/: README.md
raw/assets/: README.md
raw/inbox/: README.md
raw/sources/: README.md
skills/: README.md
skills/add-tests/: SKILL.md
skills/code-review/: SKILL.md
skills/debug-failure/: SKILL.md
system/: AGENT.md  DECISION RULES.md  HEALTH RULES.md  INTELLIGENCE LOOP.md  INTENDED BEHAVIORS.md  MODES.md  PERSONA CALIBRATION.md  QUESTIONING.md  README.md  ROUTING.md  WORKFLOWS.md
tests/: test_allocator.py  test_bootstrap_init.py  test_build_brief.py  test_codex_status.py  test_exocortex_runtime.py  test_insight_layer.py  test_instance_resolution.py  test_logbook.py  test_mission_control_backend.py  test_reward_checkin.py  test_ship_tracker.py  test_usage.py
tools/: README.md  instance.py  publish_exocortex_core.py
wiki/: index.md  log.md
(+103 files in other folders)
